--- a/demos/test-fc/index.html
+++ b/demos/test-fc/index.html
@@ -8,6 +8,8 @@
 	</head>
 	<body>
 		<div id="root"></div>
-		<script type="module" src="main.ts"></script>
+		<!-- <script type="module" src="main.ts"></script> -->
+		<script type="module" src="_main.tsx"></script>
+
 	</body>
 </html>
