--- a/demos/test-fc/index.html
+++ b/demos/test-fc/index.html
@@ -9,7 +9,8 @@
 	<body>
 		<div id="root"></div>
 		<!-- <script type="module" src="main.ts"></script> -->
-		<script type="module" src="_main.tsx"></script>
+		<!-- <script type="module" src="_main.tsx"></script> -->
+		<script type="module" src="concurrent.tsx"></script>
 
 	</body>
 </html>
